fix: Make useStickyScrollbar hook react to offset prop

--- a/src/table/sticky-scrollbar/styles.scss
+++ b/src/table/sticky-scrollbar/styles.scss
@@ -37,10 +37,6 @@
       margin-top: calc(-1 * awsui.$border-divider-section-width); // -1px to compensate for border width
       border-top: awsui.$border-divider-section-width solid awsui.$color-border-divider-default;
     }
-
-    &.is-visual-refresh {
-      margin-top: -5px;
-    }
   }
 }
 
